# stampede

./: .gitignore  CLAUDE.md  GUI.py  GUI.pyw  ImageProcessor.py  README.md  initDirs.py  log.txt  main.pyw  pyproject.toml  rect_recolourer.py  rectangles.py  requirements.txt  stamps.py  standardColours.py  staticDicts.py  stickers.py  test.py
.github/workflows/: build.yml
ImageProcessing/: CircleStickers.py  Circles.py  ImageProcessor.py  Rectangles.py
config/: initDirs.py  staticDicts.py
gui/: main_window.py
gui/dialogs/: processing_dialog.py  prompt_dialog.py  prompt_preview_dialog.py
handling/: avatar_base_handler.py  avatar_edit_handler.py  avatar_handler.py  base_image_handler.py
handling/exception/: configuration_error.py
handling/imagehandler/: circle_handler.py  circle_sticker_handler.py  rectangle_handler.py
handling/util/: util.py  view_util.py
obs/: rectangles.py  stamps.py
settings/: avatar_prompt.py  initDirs.py  init_dirs.py  log.txt  logging_config.py  paths.py  staticDicts.py  static_dicts.py
src/: ImageHandlerBase.py
src/ImageHandlers/: CircleStickers.py  Circles.py  Rectangles.py
tests/: conftest.py  testSuite.py  test_avatar_edit_handler.py  test_avatar_handler.py  test_base_image_handler.py  test_circle_handler.py  test_rectangle_handler.py
zArchive/: main.py
