[project]
name = "stampede"
version = "0.1.0"
description = "Stampede image resizer for coloured stamp tops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.31.0",
    "pillow>=12.2.0",
    "PySide6>=6.11.0",
    "python-dotenv>=1.2.2"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black",
    "pylint",
    "pyinstaller>=6.19.0",
    "isort>=8.0.1",
]
